{
    "name": "playerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "5247f232-6f7e-4ea6-9d32-a8dce4a6245e",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "PassThrough",
                    "id": "8317829f-3b4b-4b8b-a229-c46064b139d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "cf7e3000-18b1-4373-8e64-8cac2dfe8e2c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeltaTouch",
                    "type": "PassThrough",
                    "id": "89b8fdbe-295b-4894-8990-7b2c75d976c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "XPosition",
                    "type": "Value",
                    "id": "66ad5cc4-a76b-4324-8038-3fd13c55dc03",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "XDelta",
                    "type": "PassThrough",
                    "id": "c75b0263-a6ba-4d5b-b40e-791200a28dff",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "21f55a8e-29ce-4ee0-8354-dee61fad46d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0f661fd8-cb59-4eaf-b573-787879ecb805",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "387aaa4c-00e5-4a01-be1e-fd2b4a88b949",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70fc5bfa-4fbf-4c03-be5e-8372f7efa54e",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2be50cd6-ccff-4c5e-ad52-b3c5914341ca",
                    "path": "<Touchscreen>/position/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da1d1838-fca6-46bb-8952-44f3097d3416",
                    "path": "<Touchscreen>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45db955c-f48e-4b50-93f2-6b352595e8a0",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}